Finished one-flag, need to fix 1 overlap

--- a/day1/day1.css
+++ b/day1/day1.css
@@ -25,13 +25,25 @@
 	flex-direction: row;
 }
 
+.one-flag {
+	position: relative;
+	background: white;
+	z-index: 3;
+	left: -5px;
+	width: 20px;
+	height: 40px;
+	border-radius: 2px;
+	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.4);
+	transform: rotate(50deg);
+}
+
 .one-stem {
 	position: absolute;
 	left: 90px;
 	background: white;
 	z-index: 4;
 	width: 25px;
-	height: 110px;
+	height: 108px;
 	border-radius: 2px;
 	margin-bottom: 7px;
 	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.4);
